@@ -16,11 +16,8 @@ import ua.com.foxminded.university.service.*;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -78,7 +75,7 @@ class LectureControllerTest {
     @Test
     void givenCorrectGetRequest_onShowDetails_shouldReturnDetailsPageWithLecture() throws Exception {
         when(lectureService.getById(1)).thenReturn(expectedLecture1);
-        when(groupService.findAll()).thenReturn(expectedGroups1);
+        when(groupService.findAll()).thenReturn(expectedGroupsList);
         when(timeslotService.findAll()).thenReturn(expectedTimeslots);
         when(subjectService.findAll()).thenReturn(expectedSubjects);
         when(classroomService.findAll()).thenReturn(expectedClassrooms);
@@ -185,7 +182,7 @@ class LectureControllerTest {
                 .andExpect(view().name("calendar"))
                 .andExpect(model().attribute("entity", "teacher"))
                 .andExpect(model().attribute("periodType", "day"))
-                .andExpect(model().attribute("date", LocalDate.of(2021, 10, 01)))
+                .andExpect(model().attribute("date", LocalDate.of(2021, 10, 1)))
                 .andExpect(model().attribute("id", 1))
                 .andExpect(model().attribute("personName", "teacher Adam Smith"));
     }
@@ -205,26 +202,27 @@ class LectureControllerTest {
                 .andExpect(view().name("calendar"))
                 .andExpect(model().attribute("entity", "student"))
                 .andExpect(model().attribute("periodType", "day"))
-                .andExpect(model().attribute("date", LocalDate.of(2021, 10, 01)))
+                .andExpect(model().attribute("date", LocalDate.of(2021, 10, 1)))
                 .andExpect(model().attribute("id", 1))
                 .andExpect(model().attribute("personName", "student Ivan Petrov"));
     }
 
     @Test
-    void givenTeacherAndDates_onRetrieveLecturesForCalendar_shouldReturnCorrectLecturesLise() throws Exception {
-        when(teacherService.getById(1)).thenReturn(expectedTeacher1);
-        when(lectureService.findByTeacherAndPeriod(expectedTeacher1,startDate, endDate)).thenReturn(expectedLectures);
+    void givenTeacherAndDates_onRetrieveLecturesForCalendar_shouldReturnCorrectLecturesList() throws Exception {
+    //    when(teacherService.getById(1)).thenReturn(expectedTeacher1);
+    //    when(lectureService.findByTeacherAndPeriod(expectedTeacher1, startDate, endDate)).thenReturn(expectedLectures);
 
         var request = get("/lectures/schedule/calendar")
-                .param("id","1")
+                .param("id", "1")
                 .param("entity", "teacher")
                 .param("start", "2000-01-01T00:00%2B03:00")
                 .param("end", "2000-02-01T00:00%2B03:00");
 
-        var mvcResult = mockMvc.perform(request);
+        var mvcResult = mockMvc.perform(request)
+                .andExpect(status().is2xxSuccessful());
 
-        var status = mvcResult.andExpect(status().is2xxSuccessful());
-        assertEquals(true, status);
+       // var status = mvcResult.andExpect(status().is2xxSuccessful());
+      //  assertEquals(true, status);
     }
 
     @Test
@@ -251,17 +249,18 @@ class LectureControllerTest {
 
     public interface TestData {
 
-        LocalDate startDate = LocalDate.of(2000, 01, 01);
-        LocalDate endDate = LocalDate.of(2000, 02, 01);
+        LocalDate startDate = LocalDate.of(2000, 1, 1);
+        LocalDate endDate = LocalDate.of(2000, 2, 1);
 
-        Timeslot expectedTimeslot1 = new Timeslot(1, LocalTime.of(9, 00), LocalTime.of(9, 45));
-        Timeslot expectedTimeslot2 = new Timeslot(2, LocalTime.of(10, 00), LocalTime.of(10, 45));
-        Timeslot expectedTimeslot3 = new Timeslot(3, LocalTime.of(11, 00), LocalTime.of(11, 45));
+        Timeslot expectedTimeslot1 = new Timeslot(1, LocalTime.of(9, 0), LocalTime.of(9, 45));
+        Timeslot expectedTimeslot2 = new Timeslot(2, LocalTime.of(10, 0), LocalTime.of(10, 45));
+        Timeslot expectedTimeslot3 = new Timeslot(3, LocalTime.of(11, 0), LocalTime.of(11, 45));
         List<Timeslot> expectedTimeslots = new ArrayList<>(
                 Arrays.asList(expectedTimeslot1, expectedTimeslot2, expectedTimeslot3));
 
-        List<Group> expectedGroups1 = new ArrayList<>(Arrays.asList(expectedGroup1, expectedGroup2));
-        List<Group> expectedGroups2 = new ArrayList<>(Arrays.asList(expectedGroup1));
+        Set<Group> expectedGroups1 = new HashSet<>(Arrays.asList(expectedGroup1, expectedGroup2));
+        List<Group> expectedGroupsList = new ArrayList<>(Arrays.asList(expectedGroup1, expectedGroup2));
+        Set<Group> expectedGroups2 = new HashSet<>(List.of(expectedGroup1));
 
         Lecture expectedLecture1 = Lecture.builder().date(LocalDate.of(2020, 1, 1)).subject(expectedSubject1)
                 .id(1).timeslot(expectedTimeslot1).groups(expectedGroups1)
